<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#18E2FB"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTitre"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".05" />

    <TextView
        android:id="@+id/tvNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tvNom"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvTitre"
        app:layout_constraintTop_toBottomOf="@+id/tvTitre" />

    <TextView
        android:id="@+id/tvPrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tvPrenom"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvNom"
        app:layout_constraintTop_toBottomOf="@+id/tvNom" />

    <TextView
        android:id="@+id/tvSexe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Sexe:"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvPrenom"
        app:layout_constraintTop_toBottomOf="@+id/tvPrenom" />

    <TextView
        android:id="@+id/tvFonction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Fonction:"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvSexe"
        app:layout_constraintTop_toBottomOf="@+id/tvSexe" />

    <TextView
        android:id="@+id/tvTemps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Temps de travail:"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvFonction"
        app:layout_constraintTop_toBottomOf="@+id/tvFonction" />

    <TextView
        android:id="@+id/tvComm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Commentaires:"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvTemps"
        app:layout_constraintTop_toBottomOf="@+id/cbT3" />

    <EditText
        android:id="@+id/etNom"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textVisiblePassword"
        android:singleLine="true"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/tvNom"
        app:layout_constraintTop_toTopOf="@+id/tvNom" />

    <EditText
        android:id="@+id/etComm"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textVisiblePassword"
        android:textSize="16sp"
        android:gravity="top"
        app:layout_constraintEnd_toEndOf="@+id/etPrenom"
        app:layout_constraintStart_toStartOf="@+id/tvComm"
        app:layout_constraintTop_toBottomOf="@+id/tvComm" />

    <EditText
        android:id="@+id/etPrenom"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textVisiblePassword"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvPrenom"
        app:layout_constraintTop_toTopOf="@+id/tvPrenom" />

    <RadioGroup
        android:id="@+id/rgSexe"
        android:layout_width="196dp"
        android:layout_height="25dp"
        android:layout_marginStart="100dp"
        android:baselineAligned="true"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/tvSexe"
        app:layout_constraintTop_toTopOf="@+id/tvSexe">

        <RadioButton
            android:id="@+id/rbM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="M"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:text="F"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:text="A"
            android:textSize="16sp" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinFonction"
        android:layout_width="200sp"
        android:layout_height="25sp"
        android:layout_marginStart="100dp"
        android:entries="@array/fonctions"
        app:layout_constraintStart_toStartOf="@+id/tvFonction"
        app:layout_constraintTop_toTopOf="@+id/tvFonction" />

    <CheckBox
        android:id="@+id/cbT1"
        android:layout_width="wrap_content"
        android:layout_height="25sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/cbT1"
        app:layout_constraintStart_toStartOf="@+id/tvTemps"
        app:layout_constraintTop_toBottomOf="@+id/tvTemps" />

    <CheckBox
        android:id="@+id/cbT2"
        android:layout_width="wrap_content"
        android:layout_height="25sp"
        android:layout_marginStart="135dp"
        android:text="@string/cbT2"
        app:layout_constraintStart_toStartOf="@+id/cbT1"
        app:layout_constraintTop_toTopOf="@+id/cbT1" />

    <CheckBox
        android:id="@+id/cbT3"
        android:layout_width="wrap_content"
        android:layout_height="25sp"
        android:layout_marginTop="10dp"
        android:text="@string/cbT3"
        app:layout_constraintStart_toStartOf="@+id/cbT1"
        app:layout_constraintTop_toBottomOf="@+id/cbT1" />

    <CheckBox
        android:id="@+id/cbT4"
        android:layout_width="wrap_content"
        android:layout_height="25sp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="10dp"
        android:text="@string/cbT4"
        app:layout_constraintStart_toStartOf="@+id/cbT3"
        app:layout_constraintTop_toBottomOf="@+id/cbT2" />

    <Button
        android:id="@+id/btEnvoyer"
        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:outlineAmbientShadowColor="#FFEB3B"
        android:outlineSpotShadowColor="#F44336"
        android:shadowColor="#3F51B5"
        android:text="Envoyer"
        android:textColorHighlight="#9C27B0"
        android:textColorHint="#FFC107"
        app:layout_constraintStart_toStartOf="@+id/etComm"
        app:layout_constraintTop_toBottomOf="@+id/etComm"
        app:rippleColor="#8BC34A"
        app:strokeColor="#FF5722" />

    <Button
        android:id="@+id/btEffacer"
        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:outlineAmbientShadowColor="#FFEB3B"
        android:outlineSpotShadowColor="#F44336"
        android:shadowColor="#3F51B5"
        android:text="Effacer"
        android:textColorHighlight="#9C27B0"
        android:textColorHint="#FFC107"
        app:layout_constraintStart_toEndOf="@+id/btEnvoyer"
        app:layout_constraintTop_toTopOf="@+id/btEnvoyer"
        app:rippleColor="#8BC34A"
        app:strokeColor="#FF5722" />

</androidx.constraintlayout.widget.ConstraintLayout>